# backtesting

./: .gitignore  pyproject.toml
tests/: test_package.py
